Fix Page Width With Scrollbar
- Applied box-sizing: border-box to all elements, so that element size will
include padding and border

- Body max-width is now 100% of viewport width

- App width is now 100% of parent

--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -24,5 +24,5 @@
 	display:flex;
 	flex-direction: column;
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 }
